--- a/SingularityService/src/main/resources/templates/request_paused.jade
+++ b/SingularityService/src/main/resources/templates/request_paused.jade
@@ -25,6 +25,7 @@ html
           div(style="border-top: 10px solid #df4210; padding: 20px; background: #eee; border-radius: 4px; text-align: center")
             h1(style="font-weight: normal; margin: 0 0 12px; line-height: 1.3") #{ request_id }
             h2(style="font-weight: normal; margin: 0; line-height: 1") has paused
+            a(style="background: #08c; color: #fff; padding: 10px 20px; display: inline-block; text-decoration: none; font-size: 13px; letter-spacing: .08em; text-transform: uppercase; border-radius: 3px", href="#{ singularity_task_link }") View task
 
         //- Status
         div(style="padding-bottom: 20px")
