Additional loader for tailer view

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -66,6 +66,12 @@
     @media (max-width: 1199px)
         height 500px
 
+    .tail-loader
+        display: none
+
+    &.loading .tail-loader
+        display: block
+
     &.empty
         font-family inherit
         text-align center
