--- a/SingularityUI/app/views/templates/tail.hbs
+++ b/SingularityUI/app/views/templates/tail.hbs
@@ -5,6 +5,9 @@
 
 <div class="tail-outer">
     <div class="tail-container"></div>
+    <div class="tail-loader">
+        <div class="page-loader fixed"></div>
+    </div>
 </div>
 
 <div class="tail-indicator">
