Remove well styles and move nav styles to the appropriate file

--- a/SingularityUI/app/styles/navStyleTweaks.styl
+++ b/SingularityUI/app/styles/navStyleTweaks.styl
@@ -57,3 +57,16 @@ html
 
 .nav-pills-with-nav-pills-below
     margin-bottom 0
+
+.btn-navbar:hover
+    background-position initial
+    transition none
+
+.navbar .btn-navbar:active
+    box-shadow inset 0px 1px 3px rgba(0, 0, 0, 0.2)
+
+.navbar-fixed-top .brand
+    transition none
+
+.navbar .nav > li > a
+    padding 10px 10px 11px
