--- a/SingularityUI/app/views/templates/requestsActiveNav.hbs
+++ b/SingularityUI/app/views/templates/requestsActiveNav.hbs
@@ -1,11 +1,11 @@
 <ul class="nav nav-pills">
     <li {{#ifEqual requestsSubFilter "running"}}class="active"{{/ifEqual}}>
-        <a href="/singularity/requests" data-route="requests">Running</a>
+        <a href="{{#appRoot}}{{/appRoot}}requests" data-route="requests">Running</a>
     </li>
     <li {{#ifEqual requestsSubFilter "on-demand"}}class="active"{{/ifEqual}}>
-        <a href="/singularity/requests/active/on-demand" data-route="requests/active/on-demand">On-demand</a>
+        <a href="{{#appRoot}}{{/appRoot}}requests/active/on-demand" data-route="requests/active/on-demand">On-demand</a>
     </li>
     <li {{#ifEqual requestsSubFilter "scheduled"}}class="active"{{/ifEqual}}>
-        <a href="/singularity/requests/active/scheduled" data-route="requests/active/scheduled">Scheduled</a>
+        <a href="{{#appRoot}}{{/appRoot}}requests/active/scheduled" data-route="requests/active/scheduled">Scheduled</a>
     </li>
 </ul>
