--- a/SingularityUI/app/views/templates/tasksCleaning.hbs
+++ b/SingularityUI/app/views/templates/tasksCleaning.hbs
@@ -7,13 +7,13 @@
         <div class="span12">
             <ul class="nav nav-pills">
                 <li>
-                    <a href="/singularity/tasks" data-route="tasks">Active</a>
+                    <a href="{{#appRoot}}{{/appRoot}}tasks" data-route="tasks">Active</a>
                 </li>
                 <li>
-                    <a href="/singularity/tasks/scheduled" data-route="tasks/scheduled">Scheduled</a>
+                    <a href="{{#appRoot}}{{/appRoot}}tasks/scheduled" data-route="tasks/scheduled">Scheduled</a>
                 </li>
                 <li class="active">
-                    <a href="/singularity/tasks/cleaning" data-route="tasks/cleaning">Cleaning</a>
+                    <a href="{{#appRoot}}{{/appRoot}}tasks/cleaning" data-route="tasks/cleaning">Cleaning</a>
                 </li>
             </ul>
         </div>
