Remove unnecessary &nbsp; and remove action text titlecasing

--- a/SingularityUI/app/views/templates/tasksActiveTable.hbs
+++ b/SingularityUI/app/views/templates/tasksActiveTable.hbs
@@ -22,7 +22,7 @@
                     <td class="visible-desktop" data-value="{{ resources.memoryMb }}">{{ memoryHuman }}</td>
                     <td class="actions-column hidden-phone">
                         <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
-                        <a data-task-id="{{ id }}" data-action="remove">Kill&nbsp;Task</a>
+                        <a data-task-id="{{ id }}" data-action="remove">Kill task</a>
                     </td>
                 </tr>
             {{/eachWithFn}}
