Use new $linkBlue color variable in stylus

--- a/SingularityUI/app/styles/headerActions.styl
+++ b/SingularityUI/app/styles/headerActions.styl
@@ -20,7 +20,7 @@
             margin 0
 
         a
-            background #0088cc
+            background $linkBlue
             display inline-block
             padding 9px 11px
             color inherit
