--- a/SingularityUI/app/styles/star.styl
+++ b/SingularityUI/app/styles/star.styl
@@ -1,3 +1,5 @@
+@import colors
+
 a.star
     text-decoration none
     cursor pointer
@@ -11,4 +13,4 @@ a.star
     top 2px
 
     &[data-starred="true"]
-        color #08c
+        color $linkBlue
