--- a/SingularityUI/app/styles/navStyleTweaks.styl
+++ b/SingularityUI/app/styles/navStyleTweaks.styl
@@ -1,3 +1,5 @@
+@import colors
+
 html
 
     .navbar-fixed-top .brand
@@ -22,7 +24,7 @@ html
                 > a, > a:hover
                     color #fff
                     text-decoration none
-                    background-color #08c
+                    background-color $linkBlue
                     box-shadow none
 
             .divider-vertical
