Make sure search input × button has enough padding when the search input is focused

--- a/SingularityUI/app/styles/searchInput.styl
+++ b/SingularityUI/app/styles/searchInput.styl
@@ -5,6 +5,9 @@ section input[type="search"][required]
     margin-bottom 1rem
     line-height 1.5em
 
+    &:focus
+        padding-right: 2.5rem
+
 input[type="search"]
     height 1.75rem
     border 0
