Small style tweaks to vex dialog buttons

--- a/SingularityUI/app/styles/vex.styl
+++ b/SingularityUI/app/styles/vex.styl
@@ -6,6 +6,9 @@
         border 0
         background #fff
 
+.vex.vex-theme-default .vex-dialog-button.vex-dialog-button-primary
+    background $linkBlue
+
 .vex.vex-theme-default .vex-dialog-button.vex-dialog-button-primary.vex-dialog-button-primary-remove
     background $removeRed
 
