Cleanup stylus files

--- a/SingularityUI/app/styles/loader.styl
+++ b/SingularityUI/app/styles/loader.styl
@@ -29,8 +29,8 @@
         margin 0 auto
 
         &.cushy
-            margin-top: 3em
-            margin-bottom: 3em
+            margin-top 3em
+            margin-bottom 3em
 
 .page-loader-with-message
     text-align center
