--- a/SingularityUI/app/styles/search.styl
+++ b/SingularityUI/app/styles/search.styl
@@ -13,7 +13,7 @@ section input[type="search"][required].with-search-options
 
     @media (max-width: 980px)
         float none
-        width: 100%
+        width 100%
         margin-right 0
 
     @media (max-width: 767px)
@@ -21,8 +21,8 @@ section input[type="search"][required].with-search-options
 
     &::-webkit-search-cancel-button:after
         font-size 2rem
-        right: 1rem
-        top: .5rem
+        right 1rem
+        top .5rem
 
 .search-options
     clearfix()
