--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -67,10 +67,10 @@
         height 500px
 
     .tail-loader
-        display: none
+        display none
 
     &.loading .tail-loader
-        display: block
+        display block
 
     &.empty
         font-family inherit
@@ -135,9 +135,9 @@
                 margin 0
 
                 h1
-                    display: block
-                    overflow: hidden
-                    height: 1.1em
+                    display block
+                    overflow hidden
+                    height 1.1em
 
             .tail-outer
                 position absolute
