--- a/SingularityUI/app/styles/vex.styl
+++ b/SingularityUI/app/styles/vex.styl
@@ -32,6 +32,6 @@
             bottom 60px
 
         .vex-dialog-buttons
-            position: absolute
-            bottom: 20px
-            right: 20px
+            position absolute
+            bottom 20px
+            right 20px
