--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -119,6 +119,7 @@
         #page
             position fixed
             width 100%
+            max-width: 100%
             top 40px
             bottom 0
             left 0
