--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -31,6 +31,7 @@
                         <tr>
                             <th>Name</th>
                             <th class="visible-desktop">Status</th>
+                            <th class="visible-desktop">Deploy ID</th>
                             <th class="visible-desktop">Created</th>
                             <th class="hidden-phone">Updated</th>
                             <th class="hidden-phone" data-sortable="false"></th>
@@ -41,6 +42,7 @@
                             <tr data-task-id="{{ id }}">
                                 <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}task/{{ id }}" data-route="task/{{ id }}">{{#getShortTaskIDMiddleEllipsis name}}{{/getShortTaskIDMiddleEllipsis}}</a></span></td>
                                 <td class="visible-desktop">{{ lastStatusHuman }}</td>
+                                <td class="visible-desktop">{{ deployId }}</td>
                                 <td class="visible-desktop" data-value="{{ createdAt }}">{{ createdAtHuman }}</td>
                                 <td class="hidden-phone" data-value="{{ updatedAt }}">{{ updatedAtHuman }}</td>
                                 <td class="actions-column hidden-phone">
