--- a/SingularityUI/app/views/templates/requestsActiveBody.hbs
+++ b/SingularityUI/app/views/templates/requestsActiveBody.hbs
@@ -10,6 +10,7 @@
                                 <th>Name</th>
                                 <th class="hidden-phone">Requested</th>
                                 <th class="visible-desktop">Deploy User</th>
+                                <th class="visible-desktop">Deploy ID</th>
                                 <th class="visible-desktop">Instances</th>
                                 <th class="hidden-phone" data-sortable="false"></th>
                             </tr>
@@ -21,6 +22,7 @@
                                     <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                     <td class="hidden-phone" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                     <td class="visible-desktop">{{ deployUser }}</td>
+                                    <td class="visible-desktop">{{ deployId }}</td>
                                     <td class="visible-desktop">{{ instances }}</td>
                                     <td class="actions-column hidden-phone">
                                         <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
