"Deploy User" => "Deploy user" copy change Conflicts: 	SingularityUI/app/views/templates/requestsActiveBody.hbs

--- a/SingularityUI/app/views/templates/requestsPausedBody.hbs
+++ b/SingularityUI/app/views/templates/requestsPausedBody.hbs
@@ -10,7 +10,7 @@
                         <tr>
                             <th>Name</th>
                             <th class="hidden-phone">Requested</th>
-                            <th class="visible-desktop">Deploy User</th>
+                            <th class="visible-desktop">Deploy user</th>
                             <th class="visible-desktop">Instances</th>
                             <th class="hidden-phone" data-sortable="false"></th>
                         </tr>
@@ -96,7 +96,7 @@
                         <tr>
                             <th>Name</th>
                             <th class="visible-desktop">Requested</th>
-                            <th class="visible-large-desktop">Deploy User</th>
+                            <th class="visible-large-desktop">Deploy user</th>
                             <th class="visible-desktop">Schedule</th>
                             <th class="hidden-phone" data-sortable="false"></th>
                         </tr>
