--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -18,7 +18,7 @@
                             <th data-sortable="false"></th>
                             <th>Request</th>
                             <th class="hidden-phone">Requested</th>
-                            <th class="visible-desktop">Deploy User</th>
+                            <th class="visible-desktop">Deploy user</th>
                             <th class="visible-large-desktop">Instances</th>
                         </tr>
                     </thead>
