--- a/SingularityUI/app/views/templates/requestsActiveBody.hbs
+++ b/SingularityUI/app/views/templates/requestsActiveBody.hbs
@@ -9,7 +9,7 @@
                                 <th data-sortable="false"></th>
                                 <th>Name</th>
                                 <th class="hidden-phone">Requested</th>
-                                <th class="visible-desktop">Deploy User</th>
+                                <th class="visible-desktop">Deploy user</th>
                                 <th class="visible-desktop">Instances</th>
                                 <th class="hidden-phone" data-sortable="false"></th>
                             </tr>
@@ -80,7 +80,7 @@
                                 <th data-sortable="false"></th>
                                 <th>Name</th>
                                 <th class="visible-desktop">Requested</th>
-                                <th class="visible-large-desktop">Deploy User</th>
+                                <th class="visible-large-desktop">Deploy user</th>
                                 <th class="visible-desktop">Schedule</th>
                                 <th class="hidden-phone" data-sortable="false"></th>
                             </tr>
