Small style tweak to last row actions column

--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -53,6 +53,9 @@
                     background $red
                     box-shadow 0 -1px $red
 
+    tr:last-child td.actions-column a
+        margin-bottom -8px
+
     .icon
         margin-right 10px
 
