Tail view style improvements

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -131,18 +131,26 @@
                 left 0
                 right 0
                 padding 13px 20px
-                height 100px
+                height 90px
                 background #fcfcfc
                 margin 0
 
                 h1
                     display block
                     overflow hidden
-                    height 1.1em
+                    white-space nowrap
+                    text-overflow ellipsis
+                    font-size 25px
+                    height 1.4em
+                    line-height 1.4em
+                    padding-right 0
+
+                    wbr
+                        display none
 
             .tail-outer
                 position absolute
-                top 100px
+                top 90px
                 left 0
                 right 0
                 bottom 0
