Make the requests active subfilter multi-select @wsorenson Conflicts: 	SingularityUI/app/views/templates/requestsActiveBody.hbs

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -30,6 +30,10 @@ tr.filtered
 table.filtered
     display none
 
+.requests-filter-container
+    margin-top -1rem
+    margin-bottom 1rem
+
 // Overrides
 
 #nav-user-name
